--- a/src/index.html
+++ b/src/index.html
@@ -7,27 +7,27 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <div id="carousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="carousel" data-slide-to="0" class="active"></li>
-          <li data-target="carousel" data-slide-to="1"></li>
-          <li data-target="carousel" data-slide-to="2"></li>
-        </ol>
+    <div id="carousel" class="carousel">
+        <div class="carousel-indicators">
+          <div class="carousel-indicator active" data-key="0"></div>
+          <div class="carousel-indicator" data-key="1"></div>
+          <div class="carousel-indicator" data-key="2"></div>
+        </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="" src="..." alt="First slide">
+          <div class="carousel-item active" data-key="0">
+            <img class="" src="" alt="First slide">
           </div>
-          <div class="carousel-item">
-            <img class="" src="..." alt="Second slide">
+          <div class="carousel-item" data-key="1">
+            <img class="" src="" alt="Second slide">
           </div>
-          <div class="carousel-item">
-            <img class="" src="..." alt="Third slide">
+          <div class="carousel-item" data-key="2">
+            <img class="" src="" alt="Third slide">
           </div>
         </div>
-        <a class="carousel-control-prev" href="carousel" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#" role="button">
           <span class="" aria-hidden="true"></span>
         </a>
-        <a class="carousel-control-next" href="carousel" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#" role="button">
           <span class="" aria-hidden="true"></span>
         </a>
       </div>
